--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
         "dev": "nodemon src/index.js"
     },
     "dependencies": {
-        "whatsapp-web.js": "^1.23.0",
-        "qrcode-terminal": "^0.12.0",
         "@supabase/supabase-js": "^2.39.0",
+        "dotenv": "^16.3.1",
         "natural": "^6.10.4",
-        "dotenv": "^16.3.1"
+        "qrcode": "^1.5.4",
+        "qrcode-terminal": "^0.12.0",
+        "whatsapp-web.js": "^1.23.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
