--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "natural": "^6.10.4",
         "qrcode": "^1.5.4",
         "qrcode-terminal": "^0.12.0",
-        "whatsapp-web.js": "^1.23.0"
+        "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
