--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@supabase/supabase-js": "^2.39.0",
         "dotenv": "^16.3.1",
         "natural": "^6.10.4",
+        "puppeteer": "^24.36.1",
         "qrcode": "^1.5.4",
         "qrcode-terminal": "^0.12.0",
         "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main"
